sample/retrieveUnpackaged/objects/Billing_Account__c.object
<CustomObject>
    <description>This object links Customers will Properties and provides billing information.</description>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>Street_Address__c &amp;br()&amp; City__c &amp;&quot; &quot;&amp; State__c &amp;&quot; &quot;&amp; Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Closed__c</fullName>
        <label>Account Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Name_Formula__c</fullName>
        <formula>IF(ISBLANK(Title__c), &apos;&apos;, Title__c + &apos; &apos;) +  IF(ISBLANK(Initials__c), &apos;&apos;, Initials__c+ &apos; &apos;) +  Account_Name__c</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Opened__c</fullName>
        <label>Account Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Warnings__c</fullName>
        <formula>IF( ISBLANK(Group_Billing_Account__c), &apos;&apos;, IMAGE(&apos;https://southeastwater--c.ap1.content.force.com/servlet/servlet.ImageServer?id=015900000002rg0&amp;oid=00DO0000000W4pz&apos;, &apos;Blah&apos;) &amp; &apos; This is a Sub Customer. Refer all address changes to the Group Accounts Team.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Warnings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_Date__c</fullName>
        <label>Applicable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Water_Usage_KL__c</fullName>
        <formula>Total_Water_Usage_KL__c /  Total_Consumption_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Daily Water Usage (KL)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_To_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill To Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Same_As__c</fullName>
        <inlineHelpText>Please set flag None to change address in Billing Account.</inlineHelpText>
        <label>Billing Address Same As</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIS_Property_Id__c</fullName>
        <formula>Property__r.CIS_Property_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIS Property Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Firstname__c</fullName>
        <label>Card Firstname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Lastname__c</fullName>
        <label>Card Lastname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>DVA - Gold Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVA - Pensioner Concession Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pensioner Concession Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Care_Of__c</fullName>
        <label>Care Of</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Billing Account Address</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clerical__c</fullName>
        <label>Clerical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concession_End_Date__c</fullName>
        <label>Concession End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concession_Holder__c</fullName>
        <inlineHelpText>Relationship to the Billing Account holder.</inlineHelpText>
        <label>Concession Holder</label>
        <picklist>
            <picklistValues>
                <fullName>Account Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C Holder Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concession_Number__c</fullName>
        <description>Concession Card Number.</description>
        <label>Concession Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concession_Start_Date__c</fullName>
        <label>Concession Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concession_cnt__c</fullName>
        <formula>IF( Valid_Concession__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concession_cnt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Council_Property_Type__c</fullName>
        <formula>Property__r.Council_Property_Type__c</formula>
        <label>Council Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Council__c</fullName>
        <formula>Property__r.Council__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Council</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Billing Account Address</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Bill_B_F_Balance__c</fullName>
        <label>Current Bill B/F Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Bill_Billed_Amount__c</fullName>
        <label>Current Bill Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Bill_Due_Date__c</fullName>
        <label>Current Bill Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <formula>Customer__r.Id</formula>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Universal_Id__c</fullName>
        <formula>Customer__r.Universal_Id__c</formula>
        <label>Customer Universal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DPID__c</fullName>
        <description>Billing Account Address DPID</description>
        <label>DPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Check_Address_Special_Charactor__c</fullName>
        <formula>IF(OR(
OR(CONTAINS( Street_Address__c , &quot;\&quot;&quot;),CONTAINS( Street_Address__c , &quot;.&quot;)),
OR(CONTAINS( City__c , &quot;\&quot;&quot;),CONTAINS( City__c , &quot;.&quot;)),
OR(CONTAINS( Country__c , &quot;\&quot;&quot;),CONTAINS(Country__c , &quot;.&quot;)),
OR(CONTAINS( Postal_Code__c , &quot;\&quot;&quot;),CONTAINS( Postal_Code__c , &quot;.&quot;)),
OR(CONTAINS( State__c , &quot;\&quot;&quot;),CONTAINS( State__c , &quot;.&quot;))), &quot;Address has special charactors&quot;, &quot;Address has no special charactors&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Check Address Special Charactor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>Days Overdue for Credit View Page</description>
        <formula>TODAY()  -  Current_Bill_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Today - Current Bill Due Date</inlineHelpText>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Commencement_Date__c</fullName>
        <label>Direct Debit Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Details__c</fullName>
        <description>Stores bank/credit information set up for direct debit</description>
        <label>Direct Debit Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Type__c</fullName>
        <description>Direct debit option type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EWOV_Alert__c</fullName>
        <formula>Customer__r.EWOV_Alert__c</formula>
        <label>EWOV Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greater_3_Consecutive_Estimated_Reads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>&gt; 3 Consecutive Estimated Reads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Sub Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Customer_Address__c</fullName>
        <formula>IF(ISBLANK(  Group_Billing_Account__c ), &quot;N/A&quot;,  &quot;DPID: &quot;&amp; Group_Billing_Account__r.DPID__c  &amp;BR()&amp;&quot;Address Title: &quot;&amp;Group_Billing_Account__r.Title__c &amp;BR()&amp;  Group_Billing_Account__r.Street_Address__c &amp;BR()&amp; Group_Billing_Account__r.City__c &amp;BR()&amp; Group_Billing_Account__r.State__c &amp;&quot; &quot;&amp; Group_Billing_Account__r.Postal_Code__c &amp; &quot;  &quot;&amp;Group_Billing_Account__r.Country__c)</formula>
        <inlineHelpText>This is the Group Account&apos;s Address.</inlineHelpText>
        <label>Group Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_HiAF_Account_Number__c</fullName>
        <formula>Group_Billing_Account__r.HiAF_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group HiAF Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Is_Auto_Suspend_By_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Hidden) Auto Suspend By Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Synch_DD_BulkUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Campaign syncing
One off job for eDM#3</description>
        <label>HIDDEN_Synch_DD_BulkUpload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serve as flag when billing address same as is other for validation purposes</description>
        <label>Has Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HiAF_Account_Number_Check_Digit__c</fullName>
        <externalId>true</externalId>
        <label>HiAF Account Number (Check Digit)</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HiAF_Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>HiAF Account #</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ICE_Customer_Ref__c</fullName>
        <label>ICE Customer Ref</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <label>Initials</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>marks if communication has been returned and the address is invalid for that customer.</description>
        <label>Invalid Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_EWOV_Assisted_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EWOV Assisted Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_EWOV_Investigative_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EWOV Investigative Complaint?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Payment_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Bill_Date__c</fullName>
        <label>Last Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Bill_Number__c</fullName>
        <label>Last Bill Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User_Name__c</fullName>
        <formula>LastModifiedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User_Type__c</fullName>
        <formula>TEXT(LastModifiedBy.UserType)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Made__c</fullName>
        <label>Last Payment Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Read_Date__c</fullName>
        <label>Last Read Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Bill_Date__c</fullName>
        <label>Next Bill Date (Approx)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OverdueFlags__c</fullName>
        <formula>IF(( Overdue_Amount_Formula__c  &gt; 0),1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OverdueFlags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Amount_Formula__c</fullName>
        <formula>IF(
	OR(Balance__c &lt;= 0, Is_Payment_Plan__c=TRUE, Direct_Debit__c=TRUE, Recovery_Suspended_Date__c &gt;= TODAY())
	, 0
	, IF(Balance__c &lt;= Current_Bill_Billed_Amount__c
		, IF(Current_Bill_Due_Date__c &lt; TODAY()
			, Balance__c
			, 0)
		, IF(Current_Bill_Due_Date__c &lt; TODAY()
				, Balance__c
				, IF(Balance__c &lt; Current_Bill_B_F_Balance__c
					,Balance__c
					,Current_Bill_B_F_Balance__c)
				)
			
		)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Account_ID__c</fullName>
        <formula>Customer__r.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Amount__c</fullName>
        <label>Payment Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_End_Date__c</fullName>
        <label>Payment Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Frequency__c</fullName>
        <label>Payment Plan Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Removal_Due_Date__c</fullName>
        <description>The adjusted due date when a Payment Plan is removed.  This is 14 days from the date of removal.</description>
        <label>Payment Plan Removal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Start_Date__c</fullName>
        <label>Payment Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portal_Sort_Order__c</fullName>
        <description>Controls the order the account is displayed in portal</description>
        <formula>CASE( Status__c , &apos;Active&apos;, 1, &apos;Pending&apos;, 2, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Update_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Portal Update User</description>
        <label>Portal Update User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portal_Update_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Billing Account Address</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Recipient_Email_First_Name__c</fullName>
        <description>eBill Recipient Prior First Name</description>
        <formula>eBill_Recipient_Prior__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Recipient Email First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Recipient_Email__c</fullName>
        <description>Prior Recipient Email</description>
        <formula>eBill_Recipient_Prior__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Recipient Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Property__r.Street_Address__c &amp; br() &amp; Property__r.Suburb__c &amp;&quot; &quot;&amp; text( Property__r.State__c)&amp;&quot; &quot;&amp; Property__r.Postal_Code__c</formula>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_DPID__c</fullName>
        <formula>Property__r.DPID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property DPID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Id__c</fullName>
        <formula>Property__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Usage__c</fullName>
        <formula>Text(Property__r.Property_Usage__c)</formula>
        <label>Property Usage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <formula>eBill_Recipient__r.Email</formula>
        <label>Recipient Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Mobile__c</fullName>
        <formula>eBill_Recipient__r.MobilePhone</formula>
        <label>Recipient Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Last_Action_Date__c</fullName>
        <description>Shows the date of the last recovery action against the billing account</description>
        <inlineHelpText>Shows the date of the last recovery action against the billing account</inlineHelpText>
        <label>Recovery Last Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recovery_Last_Action__c</fullName>
        <description>Shows information regarding the last recovery action for the billing account</description>
        <inlineHelpText>Shows information regarding the last recovery action for the billing account</inlineHelpText>
        <label>Recovery Last Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Next_Action_Date__c</fullName>
        <description>Shows the date of the next recovery action against the billing account</description>
        <inlineHelpText>Shows the date of the next recovery action against the billing account</inlineHelpText>
        <label>Recovery Next Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recovery_Next_Action__c</fullName>
        <description>Shows information regarding the next recovery action against the billing account</description>
        <inlineHelpText>Shows information regarding the next recovery action against the billing account</inlineHelpText>
        <label>Recovery Next Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Path__c</fullName>
        <label>Recovery Path</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recovery_Suspended_Date__c</fullName>
        <description>Shows the date suspend recovery was applied until</description>
        <inlineHelpText>Shows the date suspend recovery was applied until</inlineHelpText>
        <label>Recovery Suspended To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_Method__c</fullName>
        <label>Reminder Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_or_Non_Residential__c</fullName>
        <label>Residential or Non-Residential</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Factor__c</fullName>
        <label>Risk Factor</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Owner Occupier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad-Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Run_From_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to prevent trigger runs when update comes from a workflow when applying future addresses</description>
        <label>Run From Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_Name_As_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Same Name As Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Mail_To__c</fullName>
        <label>Send Mail To</label>
        <picklist>
            <picklistValues>
                <fullName>My mailing address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My home address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My business address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The property address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Another address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Billing Account Address</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>?Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Billing Account Address</description>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Billing_City__c</fullName>
        <label>(Temp) Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Billing_Country__c</fullName>
        <label>(Temp) Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Billing_DPID__c</fullName>
        <label>(Temp) Billing DPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Billing_Postal_Code__c</fullName>
        <label>(Temp) Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Billing_State__c</fullName>
        <label>(Temp) Billing State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Billing_Street_Address__c</fullName>
        <label>(Temp) Billing Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Consumption_Days__c</fullName>
        <description>Used for average calculation</description>
        <label>Total # of Consumption Days</label>
        <summarizedField>Consumption_and_Charge__c.Number_of_Days__c</summarizedField>
        <summaryForeignKey>Consumption_and_Charge__c.Billing_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Water_Usage_KL__c</fullName>
        <label>Total Water Usage (KL)</label>
        <summarizedField>Consumption_and_Charge__c.Water_Volume__c</summarizedField>
        <summaryForeignKey>Consumption_and_Charge__c.Billing_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trading_Name__c</fullName>
        <formula>Customer__r.Trading_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trading Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Sub_Account_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in the Batch Class that updates all Sub Billing Account Addresses when the Group Account Address is updated</description>
        <label>Update Sub Account Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_Touchpoints_Timestamp__c</fullName>
        <label>Updated_Touchpoints_Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_Touchpoints__c</fullName>
        <label>Updated_Touchpoints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Concession__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Concession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WaterMAP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WaterMAP</label>
        <referenceTo>WaterMAP__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eBill_Method__c</fullName>
        <label>eBill Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BPAY View</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eBill_Recipient_Prior_First_Name__c</fullName>
        <description>eBill Recipient Prior First Name</description>
        <formula>eBill_Recipient_Prior__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>eBill Recipient Prior First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eBill_Recipient_Prior_Last_Name__c</fullName>
        <description>eBill Recipient Prior Last Name</description>
        <formula>eBill_Recipient_Prior__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>eBill Recipient Prior Last Name</label>
        <type>Text</type>
    </fields>
</CustomObject>